# heirloom-oawk

./: GNUmakefile.am  configure.ac
samples/: sort-merge.oawk
